DROPME: Run Trino tests with --enable-preview